--- a/Plugins/Games/Greedy Dice/Greedy Dice.csproj
+++ b/Plugins/Games/Greedy Dice/Greedy Dice.csproj
@@ -1,21 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <Version>2.1.0</Version>
-    <PackageId>GreedyDice</PackageId>
-    <Authors>Andrio Celos</Authors>
-    <Product>GreedyDice</Product>
-    <Copyright>© 2012-2022 Andrea Giannone</Copyright>
-    <SignAssembly>False</SignAssembly>
-    <PackageProjectUrl>https://github.com/AndrioCelos/CBot</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/AndrioCelos/CBot</RepositoryUrl>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<EnableDynamicLoading>true</EnableDynamicLoading>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<Title>CBot Greedy Dice module</Title>
+		<Version>2.1.0</Version>
+		<Authors>Andrio Celos</Authors>
+		<Copyright>© 2012-2023 Andrio Celos</Copyright>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\AnIRC\AnIRC\AnIRC.csproj" />
-    <ProjectReference Include="..\..\..\CBot\CBot.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\AnIRC\AnIRC\AnIRC.csproj">
+			<Private>false</Private>
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</ProjectReference>
+		<ProjectReference Include="..\..\..\CBot\CBot.csproj">
+			<Private>false</Private>
+			<ExcludeAssets>runtime</ExcludeAssets>
+		</ProjectReference>
+	</ItemGroup>
 
 </Project>
